--- a/.github/workflows/publish_chart.yaml
+++ b/.github/workflows/publish_chart.yaml
@@ -1,30 +1,34 @@
-name: Publish rcll-simulation-chart to GHCR
+name: Release Charts
 
 on:
   push:
-    branches: [ main ]  # Change this to the branch you want to trigger on
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
-  publish:
+  release:
+    # depending on default permission settings for your org (contents being read-only or read-write for workloads), you will have to add permissions
+    # see: https://docs.github.com/en/actions/security-guides/automatic-token-authentication#modifying-the-permissions-for-the-github_token
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Set up Helm
-        uses: azure/setup-helm@v3
         with:
-          version: v3.8.0  # Specify the Helm version you need
+          fetch-depth: 0
 
-      - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | helm registry login ghcr.io --username ${{ github.repository_owner }} --password-stdin
-
-      - name: Package Helm chart
-        run: helm package rcll-simulation
-
-      - name: Push Helm chart to GHCR
+      - name: Configure Git
         run: |
-          chart_version=$(helm show chart ./rcll-simulation | grep version | awk '{print $2}')
-          helm push rcll-simulation-${chart_version}.tgz oci://ghcr.io/${{ github.repository_owner }}/helm-charts
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
+      - name: Install Helm
+        uses: azure/setup-helm@v4
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.6.0
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
