now using mqtt machines and cyan/magenta is only created if its used.

--- a/charts/rcll-simulation/templates/team_magenta.yaml
+++ b/charts/rcll-simulation/templates/team_magenta.yaml
@@ -1,3 +1,4 @@
+{{if .Values.magenta}}
 ---
 apiVersion: v1
 kind: Secret
@@ -59,6 +60,7 @@ spec:
       name: {{ $port.name }}
       port: {{ $port.port }}
       targetPort: {{ $port.port }}
+{{end}}
 {{end}}
 {{end}}
 {{end}}
