--- a/charts/rcll-simulation/templates/configs/simulator-config.yaml
+++ b/charts/rcll-simulation/templates/configs/simulator-config.yaml
@@ -11,97 +11,97 @@ data:
         active: true
         debug: true
         type: BS
-        port: 4840
+        port: 1883
         position: MZ18
         orientation: 0
       C-CS1:
         active: true
         debug: true
-        port:  4841
+        port:  1883
         type: CS
         position: MZ54
         orientation: 135
       C-CS2:
         active: true
         debug: true
-        port:  4842
+        port:  1883
         type: CS
         position: CZ77
         orientation: 90
       C-RS1:
         active: true
         debug: true
-        port:  4843
+        port:  1883
         type: RS
         position: CZ21
         orientation: 180
       C-RS2:
         active: true
         debug: true
-        port:  4844
+        port:  1883
         type: RS
         position: MZ25
         orientation: 45
       C-DS:
         active: true
         debug: true
-        port:  4845
+        port:  1883
         type: DS
         position: MZ72
         orientation: 90
       C-SS:
         active: true
         debug: true
-        port:  4846
+        port:  1883
         type: SS
         position: MZ77
         orientation: 270
       M-BS:
         active: false
         debug: True
-        port:  4850
+        port:  1883
         type: BS
         position: MZ28
         orientation: 0
       M-CS1:
         active: false
         debug: True
-        port:  4851
+        port:  1883
         type: CS
         position: CZ54
         orientation: 45
       M-CS2:
         active: false
         debug: True
-        port:  4852
+        port:  1883
         type: CS
         position: CZ47
         orientation: 90
       M-RS1:
         active: false
         debug: True
-        port:  4853
+        port:  1883
         type: RS
         position: MZ21
         orientation: 135
       M-RS2:
         active: false
         debug: True
-        port:  4854
+        port:  1883
         type: RS
         position: CZ15
         orientation: 180
       M-DS:
         active: false
         debug: True
-        port:  4855
+        port:  1883
         type: DS
         position: CZ72
         orientation: 225
       M-SS:
         active: false
         debug: True
-        port:  4856
+        port:  1883
         type: SS
         position: MZ78
         orientation: 0
@@ -161,6 +161,11 @@ data:
       magenta:
         send: 4442
         recv: 4447
+      mqtt:
+        broker_ip: localhost
+        broker_port: 1883
+        active: true
+
     webui:
       prefix: http
       port: 8000
@@ -173,10 +178,10 @@ data:
       robot-prepare-mps: true # robot is responsible to send prepare machine messages, option might be removed in future as teams tend to send prepare via their main control unit
       robot-direct-beacon: false  # Robot is expected to send his beaconsignals directly to the refbox via udp
       enable-barcode-scanner: true
-      robot-move-zone-duration: 2 # in seconds
-      robot-grab-product-duration: 10 # duration for a single try of a grab 
+      robot-move-zone-duration: 1.5 # in seconds
+      robot-grab-product-duration: 5 # duration for a single try of a grab
       robot-maximum-grab-duration: 40 # duration after which a grab is stopped 
-      robot-place-product-duration: 10 # duration for a single place try
+      robot-place-product-duration: 5 # duration for a single place try
       belt-action-duration: 2.5 # time the belt takes to move a product from one place to another - taken from gazebo
       bs-dispense-duration: 2.5 # time the base station takes to dispense a base - taken from gazebo
       cs-buffer-duration: 3.5  # buffer cap - taken from gazebo
